--- a/template/path.html
+++ b/template/path.html
@@ -1,9 +1,9 @@
 <div class="row">
-    <div class="col-sm-4 col-sm-offset-8">
-        <ol class="breadcrumb" style="margin-top: 5px;background: #fff">
-            <li>当前位置</li>
-            <li><a>{{ path1 }}</a></li>
-            <li class="active">{{ path2 }}</li>
-        </ol>
+    <div class="col-sm-2 col-sm-offset-10">
+        <div  style="margin-top: 26px;margin-left: 20px">
+            <span>当前位置:</span>
+            <span ng-bind="path1"></span>
+            /<span ng-bind="path2"></span>
+        </div>
     </div>
 </div>
