--- a/view/home.html
+++ b/view/home.html
@@ -15,7 +15,7 @@
 
             <ul class="nav navbar-top-links navbar-right">
                 <!-- /.dropdown -->
-                <li><a>教务管理员：张某某</a></li>
+                <li><span>教务管理员：张某某</span></li>
                 <li><a>退出</a></li>
             </ul>
             <!-- /.navbar-top-links -->
