--- a/view/edit_course.html
+++ b/view/edit_course.html
@@ -16,38 +16,38 @@
                                         <input type="text" class="form-control"  placeholder="上传LOGO">
                                     </div>
                                     <div class=" col-sm-2">
-                                        <button class="btn btn-success">上传图片</button>
+                                        <button class="btn btn-success btn-block">上传图片</button>
                                     </div>
                                     <div class=" col-sm-2">
-                                        <button class="btn btn-success">查看图片</button>
+                                        <button class="btn btn-success btn-block">查看图片</button>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk" style="color: red"></span> 课程名称</label>
+                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk xcj-import" style="color: red"></span> 课程名称</label>
                                     <div class="col-sm-8">
                                         <input type="text" class="form-control"  placeholder="请输入课程名称">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk" style="color: red"></span> 学生端展示名称</label>
+                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk xcj-import" style="color: red"></span> 学生端展示名称</label>
                                     <div class="col-sm-8">
                                         <input type="text" class="form-control"  placeholder="请输入名称">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk" style="color: red"></span> 课程编号</label>
+                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk xcj-import" style="color: red"></span> 课程编号</label>
                                     <div class="col-sm-8">
                                         <input type="text" class="form-control"  disabled>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk" style="color: red"></span> 课件</label>
+                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk xcj-import" style="color: red"></span> 课件</label>
                                     <div class="col-sm-8">
                                         <input type="text" class="form-control" disabled>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk" style="color: red"></span> 课程</label>
+                                    <label  class="col-sm-4 control-label"><span class="fa fa-asterisk xcj-import" style="color: red"></span> 课程</label>
                                     <div class="col-sm-4">
                                         <select class="form-control" name="" id="">
                                             <option value="">卡罗拉</option>
