--- a/view/login.html
+++ b/view/login.html
@@ -8,35 +8,37 @@
         <div style="height: 100%">
             <div class="row">
                 <div class="col-md-3 col-md-offset-4">
-                    <div class="login-panel panel panel-default" style="border-top: 3px solid #33bb33">
+                    <div class="login-panel panel panel-default" style="border-top: 3px solid #33bb33;box-shadow: 5px 0 5px gainsboro,0 5px 5px gainsboro,-5px 0 5px gainsboro">
                         <div class="panel-heading" style="background: #fff;border-bottom: none">
                             <h3 class="panel-title text-center" style="height: 100px;line-height: 100px;text-align: center;color: #33bb33">小车匠汽车技术培训平台</h3>
                         </div>
-                        <div class="panel-body">
-                            <form role="form" name="form" ng-submit="vm.submit(vm.form)" >
-                                <fieldset>
-                                    <div class="form-group">
-                                        <input class="form-control" placeholder="请输入邮箱/手机号" name="username" type="text" autofocus ng-model="vm.form.username">
-                                    </div>
-                                    <div class="form-group">
-                                        <input class="form-control" placeholder="请输入密码" name="password" type="password" value="" ng-model="vm.form.password">
-                                    </div>
+                        <div class="panel-body" style="margin-bottom: 110px">
+                            <div class="col-sm-10 col-sm-offset-1">
+                                <form role="form" name="form" ng-submit="vm.submit(vm.form)" >
+                                    <fieldset>
+                                        <div class="form-group">
+                                            <input class="form-control" placeholder="请输入邮箱/手机号" name="username" type="text" autofocus ng-model="vm.form.username">
+                                        </div>
+                                        <div class="form-group">
+                                            <input class="form-control" placeholder="请输入密码" name="password" type="password" value="" ng-model="vm.form.password">
+                                        </div>
 
-                                    <div class="checkbox col-sm-6">
-                                        <label>
-                                            <input name="remember" type="checkbox" value="Remember Me">记住密码
-                                        </label>
-                                    </div>
-                                    <div class="input-group col-sm-6" style="margin: 20px auto">
-                                        <select class="form-control">
-                                            <option value="">学生登陆</option>
-                                            <option value="">教师登陆</option>
-                                            <option value="">管理员登陆</option></select>
-                                    </div>
+                                        <div class="checkbox col-sm-6">
+                                            <label>
+                                                <input name="remember" id="remember" type="checkbox" value="Remember Me">记住密码
+                                            </label>
+                                        </div>
+                                        <div class="input-group col-sm-6" style="margin: 20px auto">
+                                            <select class="form-control">
+                                                <option value="">学生登陆</option>
+                                                <option value="">教师登陆</option>
+                                                <option value="">管理员登陆</option></select>
+                                        </div>
 
-                                    <button type="submit" ng-click="vm.go()" class="btn btn-success btn-block">登陆</button>
-                                </fieldset>
-                            </form>
+                                        <button type="submit" ng-click="vm.go()" class="btn btn-success btn-block">登陆</button>
+                                    </fieldset>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -47,4 +49,5 @@
             <br/>
         </div>
     </div>
+
 
