--- a/view/promp/student_changepw.html
+++ b/view/promp/student_changepw.html
@@ -7,19 +7,13 @@
         <div class="col-sm-12">
             <form class="form-horizontal" style="margin-top: 20px">
                 <div class="form-group">
-                    <label  class="col-sm-3 control-label">当前密码</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control"  placeholder="请输入当前密码">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label  class="col-sm-3 control-label">新密码</label>
+                    <label  class="col-sm-3 control-label"><span class="fa fa-asterisk xcj-import" style="color: red"></span> 新密码</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control"  placeholder="请输入新密码">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label  class="col-sm-3 control-label">确认密码</label>
+                    <label  class="col-sm-3 control-label"><span class="fa fa-asterisk xcj-import" style="color: red"></span> 确认密码</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control"  placeholder="请再次输入新密码">
                     </div>
