--- a/view/students.html
+++ b/view/students.html
@@ -109,14 +109,7 @@
                 </tr>
                 </tbody>
             </table>
-            <div>
-                <div class="col-lg-2 col-lg-offset-6">
-                    <p style="height: 40px;text-align: center;line-height: 40px;margin-top: 10px">共6页，每页显示5条</p>
-                </div>
-                <div class="col-lg-4">
-                        <ul class="pagination" style="margin: 10px auto"><li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous"><a href="#"><</a></li><li class="paginate_button active" aria-controls="dataTables-example" tabindex="0"><a href="#">1</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">2</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">3</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">4</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">5</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">6</a></li><li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next"><a href="#">></a></li></ul>
-
-                </div>
+            <div xcj-pagination>
 
             </div>
         </div>
