--- a/view/teachers.html
+++ b/view/teachers.html
@@ -1,5 +1,6 @@
 
 <div xcj-path path1="人员管理" path2="教师管理"></div>
+
     <div class="row">
         <div class="col-sm-12">
             <form class="navbar-form" role="search" id="formss">
@@ -10,13 +11,6 @@
                 <div class="form-group" style="margin-left: 30px">
                     <a class="btn btn-success" style="margin: auto 10px">新增</a>
                     <button type="button" id="delButton" class="btn btn-danger"  data-toggle="modal" data-target="#deleteModal" ng-click="vm.delete()">删除</button>
-                </div>
-                <div class="form-group" style=" padding-left:40px;">
-                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#inputExcelModal" >导入</button>
-                    <button type="button" class="btn btn-info" ng-click="">导出</button>
-                </div>
-                <div class="form-group" style=" padding-left:20px;">
-                    <button type="button" class="btn btn-info" onclick="window.location.href='/data/download/学员数据模板样例.xls'">导出模板</button>
                 </div>
             </form>
         </div>
@@ -102,14 +96,7 @@
                 </tr>
                 </tbody>
             </table>
-            <div>
-                <div class="col-lg-2 col-lg-offset-6">
-                    <p style="height: 40px;text-align: center;line-height: 40px;margin-top: 10px">共6页，每页显示5条</p>
-                </div>
-                <div class="col-lg-4">
-                        <ul class="pagination" style="margin: 10px auto"><li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous"><a href="#"><</a></li><li class="paginate_button active" aria-controls="dataTables-example" tabindex="0"><a href="#">1</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">2</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">3</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">4</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">5</a></li><li class="paginate_button " aria-controls="dataTables-example" tabindex="0"><a href="#">6</a></li><li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next"><a href="#">></a></li></ul>
-
-                </div>
+            <div xcj-pagination>
 
             </div>
         </div>
